ci: jib jvmFlags 에서 GC 제거(배포 환경에서 결정)